# py-dataframe-show-reader

./: Pipfile  README.md  pyproject.toml  setup.py
dataframe_show_reader/: dataframe_show_reader.py
